<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginFragment"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:src="@drawable/ic_logo_white"
            android:contentDescription="@string/app_logo" />

        <LinearLayout
            android:id="@+id/mainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.main.MainFragment"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome_title"
                android:textStyle="bold"
                android:textColor="@color/matte_black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvhSignInMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_msg"
                android:textColor="@color/matte_black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLoginEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@color/light_gray"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/matte_black"
                    android:hint="@string/login_email_hint"
                    android:textColorHint="@color/gray"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLoginPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:background="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:hint="@string/login_hint_password"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:textColor="@color/matte_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/ripple_border_red"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/btn_login"/>

            <TextView
                android:id="@+id/tvGoToSignup"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_btn_go_signup"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/light_red"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>