<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signupFragment"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="ui.main.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_logo_white" />

            <LinearLayout
                android:id="@+id/mainFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners_top_white"
                android:gravity="center"
                android:paddingVertical="40dp"
                android:orientation="vertical"
                tools:context=".ui.main.MainFragment">

                <LinearLayout
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    tools:context=".ui.main.MainFragment">

                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:lineHeight="30sp"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="0dp"
                        android:text="Join us at MediReport."
                        android:textColor="@color/matte_black"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/tvhSignInMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="Saving lives one patient at a time."
                        android:textColor="@color/matte_black"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRegisterName"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignupName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corners_gray"
                        android:hint="@string/signup_hint_full_name"
                        android:inputType="text|textCapWords"
                        android:padding="14dp"
                        android:textColor="@color/matte_black"
                        android:textSize="14sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRegisterEmail"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners_gray"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="14dp"
                        android:textColor="@color/matte_black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginPassword"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:endIconMode="password_toggle"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners_gray"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColor="@color/matte_black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmPassword"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:endIconMode="password_toggle"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignupConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners_gray"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColor="@color/matte_black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    android:layout_width="315dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ripple_border_red"
                    android:text="@string/btn_register"
                    android:textSize="16dp"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/tvGoToLogin"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/btn_register_go_login"
                    android:textAlignment="center"
                    android:textColor="@color/light_red"
                    android:textSize="14sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center">
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>